--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Kanye Dig It?</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <h1>I need a pick me up</h1>
-  <script src="js/main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Kanye Dig It?</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <h1>Kanye Quotes</h1>
+    <div id="display-quote"></div>
+    <div id="button-wrapper">
+      <button id="get-started">Click To Hear From A Crazy Dude!</button>
+      <script src="js/main.js"></script>
+    </div>
+  </body>
 </html>
